theme3/theme3.css
/* ... */
.audiowrapper .audio_player { /* Layout of seekbar and timestamps */
	display: grid;
	grid-template-columns: 3em 1fr 3em;
	width: 100%;
	column-gap: 0.5em;
	align-items: center;
}
.custom_audio_current_time { justify-self: right }
.custom_audio_time_left { justify-self: left }
.audiowrapper .custom_audio_seekbar { /* Audio progress bar */
	width: 100%;
	height: 1em;
	border: thin solid var(--links);
}
.audiowrapper .custom_audio_seekbar_progress { /* Audio progress bar, darkened bit */
	width: 0;
	height: 100%;
	background: var(--links);
}
.custom_audio_time_left::before { content : "-" }
/* Video posts */
.tumblr_video_container,
.tumblr_video_container iframe {
	max-width: 100%;
	width: 100% !important;
}
/* Ask posts */
.post .ask {
	background: rgba(var(--text--rgb), 0.1);
	padding: 0.75em 1em;
	margin-bottom: 0.5em;
}
.ask .username { font-weight: bold; }
.ask .question { margin-top: 0.5em; margin-left: 1em }
.ask .question > :first-child { margin-top: 0 }
.ask .question > :last-child { margin-bottom: 0 }


/******************************** PAGINATION ********************************/
#navigation {
	padding: 0.25em 0 1em;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	align-items: center;
}
#navigation .prev {
	left: 0.5em;
	grid-column: 1;
	justify-self: left;
	padding-right: 0.25em;
}
#navigation > span {
	grid-column: 2;
	justify-self: center;
}
#navigation .next {
	right: 0.5em;
	grid-column: 3;
	justify-self: right;
	padding-left: 0.25em;
}
@media (min-width: 62.5em) {
	#navigation a {
		font-size:2em;
		position:fixed;
		top:calc(50% - 1em)
	}

	#navigation a svg { transform: scale(250%) }
}
@media (max-width: 62.5em) {
	#navigation a { line-height: 0 }
}


/***************************** BLOG INFO SIDEBAR *****************************/
#sidebar {
	max-width: max(calc(var(--post-width) / 2), 300px);
	padding: 1em 0;
	--component-spacing: 0.75em;
	--main-border: 0.2em solid var(--accent2);
	--main-padding: 1em;
}
/* Account for placement of sidebar... */
body:not(.sidebarleft) #sidebar { /* ...on right */
	padding-left: var(--main-padding);
	border-left: var(--main-border);
	grid-column: 2;
}
body.sidebarleft #sidebar { /* ...on left */
	padding-right: var(--main-padding);
	border-right: var(--main-border);
	justify-self: end;
}
/* Separators for sidebar sections */
#sidebar > *:not(:last-child) {
	border-bottom: 0.15em solid var(--accent2);
	margin-bottom: var(--component-spacing);
	padding-bottom: var(--component-spacing);
}
/* Description special styles */
#description.justify { text-align: justify }
#description.dropcap { min-height: 3.5em }
#description.dropcap::first-letter {
	text-transform: uppercase;
	float: left;
	margin-top: 0.05em;
	margin-right: 0.025em;
	font-size: 3.25em;
	color: var(--bold);
	line-height: 0.5;
}
/* Group members section */
#members .members {
	display: flex;
	flex-direction: column;
	row-gap: 0.5em;
}
#members a figure {
	display: grid;
	grid-template-columns: 2.5em 1fr;
	align-items: center;
	column-gap: 0.75em;
}
/* Custom pages and search sections */
.title,
#sidebar h2 {
	text-transform: uppercase;
	font-weight: 300;
	text-align: center;
}
#sidebar h2 { margin: 0 0 0.25em }
#pages a {
	text-align: center;
	display: block;
	padding: 0.5em 0.25em;
	border-top: thin solid var(--accent2);
}
#pages a:last-child {
	border-bottom: thin solid var(--accent2);
}
#pages a:hover { background-color: rgba(var(--links--rgb), 0.05) }
form div { position: relative }
form input {
	width: 100%;
	border: thin solid var(--accent2);
	background: rgba(var(--links--rgb), 0.1);
	color: var(--text);
	height: 1.5em;
	padding: 0.25em;
	padding-right: 1.625em;
}
form svg {
	position: absolute;
	top: 0;
	right: 0;
	display: flex;
	height: 100%;
	padding: 0.125em;
}


/********************************** FOOTER **********************************/
footer {
	padding-top: 0.5em;
	margin-bottom: 0.5em;
	grid-column: 1/span 2;
	border-top: 0.1em solid var(--accent2);
	border-bottom: 0.2em solid var(--accent2);
	text-align: center;
}
footer::after {
	content: "";
	display: block;
	border-bottom: 0.1em solid var(--accent2);
	width: 100%;
	margin: 0.5em 0 0.2em;
}
/* Blog credit's separator */
footer span {
	border-right: thin solid var(--accent2);
	margin-right: 0.5em;
	padding-right: 0.5em;
}
/* Dark/light mode toggle */
#darklight {
	background: var(--bg);
	border: thin solid var(--accent2);
	position: fixed;
	bottom: 0.5em;
	right: 0.5em;
	--size: 2em;
	width: var(--size);
	height: var(--size);
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0.25em;
}
/* Hide the opposing icon when on each color mode */
body:not(.light) #darklight .feather-moon,
body.light #darklight .feather-sun {
	display: none
}



/****************************** RESPONSIVENESS ******************************/
@media (max-width: 800px) {
	/* Slight page shrink */
	body { font-size: 90% }
}
@media (max-width: 700px) {
	/* Resize elements */
	#title > a { font-size: 1.5em }
	
	/* For when only one link block is enabled */
	/* Only ask/submit */
	#links.ask:not(.random, .archive),
	#links.submit:not(.random, .archive),
	/* Only random/archive */
	#links.random:not(.ask, .submit),
	#links.archive:not(.ask, .submit) {
		grid-template-columns:1fr 2fr
	}
	/* For when both link blocks are enabled */
	/* Ask and the random/archive block */
	#links.ask.random,
	#links.ask.archive,
	/* Submit and the random/archive block */
	#links.submit.random,
	#links.submit.archive {
		grid-template-columns: 1fr 2fr 2fr
	}
	
	#sidebar { padding-left: 1em }
}
/* ... */

